[package]
name = "rpass"
version = "0.1.0"
authors = ["bleex <9681306+bleex@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keepass = '*'
argparse = '*'
serde = { version = '*', features = ['derive'] }
serde_yaml = '*'
blxlibssh = { version = '*', git = 'file:///srv/vm/home/dev/rust/blxlibssh' }
libc = '*'
